--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "node",
       "request": "launch",
       "name": "debug:orderArchive",
-      "program": "${workspaceFolder}/node_modules/.bin/functions-framework",
+      "program": "${workspaceFolder}/node_modules/@google-cloud/functions-framework/build/src/index.js",
       "envFile": "${workspaceFolder}/.env",
       "args": [
         "--target=orderArchive",
